My First Assignment

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="banner">
                 <div class="text-area">
                     <h1>Get body in<br><span>shape</span> & stay<br>healthy</h1>
-                    <p>A huge selecton of healthy and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                    <p>A huge selecton of healthy and fitness content, healthy recipes and <br> transformation stories to help you get fit and stay fit!</p>
                     <div class="button">
                         <a href="" class="btn1">Join <span class="span">Club</span> Now!</a>
                         <a href="#">Download App</a>
@@ -47,7 +47,7 @@
                         <h1>500+</h1>
                         <span>Free Workout Video</span>
                     </div> -->
-                    <img src="../images/images 2.png" alt="">
+                    <img src="images/images 2.png" alt="">
                 </div>
             </div>
         </header>
@@ -60,28 +60,28 @@
             </div>
             <div class="grid-container">
                 <div class="grid-card">
-                    <img src="./images/image 3.png" alt="">
+                    <img src="images/image 3.png" alt="">
                     <div class="title">
                         <h4>Movment</h4>
                         <span>We believe fitness should be accessible to everyone</span>
                     </div>
                 </div>
                 <div class="grid-card">
-                    <img src="./images/image 2.png" alt="">
+                    <img src="images/image 2.png" alt="">
                     <div class="title">
                         <h4>Time</h4>
                         <span>We believe fitness should be accessible to everyone</span>
                     </div>
                 </div>
                 <div class="grid-card">
-                    <img src="./images/image 4.png" alt="">
+                    <img src="images/image 4.png" alt="">
                     <div class="title">
                         <h4>Practice</h4>
                         <span>We believe fitness should be accessible to everyone</span>
                     </div>
                 </div>
                 <div class="grid-card">
-                    <img src="./images/image 5.png" alt="">
+                    <img src="images/image 5.png" alt="">
                     <div class="title">
                         <h4>Time</h4>
                         <span>We believe fitness should be accessible to everyone</span>
@@ -98,7 +98,7 @@
                     <button>Join Now</button>
                 </div>
                 <div class="image">
-                    <img src="./images/run.jpg" alt="" width="" height="">
+                    <img src="images/run.jpg" alt="" width="" height="">
                 </div>
             </div>
         </section>
@@ -112,29 +112,29 @@
             </div>
             <div class="container">
                 <div class="div1" style="flex-grow: 0;">
-                    <img src="./images/exercise1.jpg" alt="">
+                    <img src="images/exercise1.jpg" alt="">
                     <span>Lorem Ipsum</span>
                 </div>
                 <div class="div2" style="flex-grow: 3;">
-                    <img src="./images/exercise2.png" alt="">
+                    <img src="images/exercise2.png" alt="">
                     <span>Lorem Ipsum</span>
                 </div>
                 <div class="div3" style="flex-grow: 0;">
-                    <img src="./images/exercise3.png" alt="">
+                    <img src="images/exercise3.png" alt="">
                     <span>Leg Press: Works the <br> quadriceps and glutes</span>
                 </div>
                 <div class="div4" style="flex-grow: 4;">
-                    <img src="./images/exercise4.png" alt="">
+                    <img src="images/exercise4.png" alt="">
                     <span class="span1">Lorem Ipsum</span>
                     <span class="span2">Leg Press: Works the <br> quadriceps and glutes</span>   
                 </div>     
                 <div class="div5" style="flex-grow: 0;">
-                    <img src="./images/exercise5.jpg" alt="">
+                    <img src="images/exercise5.jpg" alt="">
                     <span class="span1">Lorem Ipsum</span>
                     <span class="span2">Leg Press: Works the <br> quadriceps and glutes</span> 
                 </div>
                 <div class="div6" style="flex-grow: 3;">
-                    <img src="./images/exercise6.jpg" alt="">
+                    <img src="images/exercise6.jpg" alt="">
                     <span>Leg Press: Works the <br> quadriceps and glutes</span>
                 </div>
             </div>
@@ -214,42 +214,42 @@
             <div class="container">
                 <div class="team-content">
                     <div class="card">
-                        <img src="./images/trainer1.png" alt="">
+                        <img src="images/trainer1.png" alt="">
                         <div class="title title-1">
                             <h3>Jerome Bell</h3>
                             <span>Trainer</span>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./images/trainer2.png" alt="">
+                        <img src="images/trainer2.png" alt="">
                         <div class="title title-2">
                             <h3>Cameron Williamson</h3>
                             <span>Trainer</span>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./images/trainer3.png" alt="">
+                        <img src="images/trainer3.png" alt="">
                         <div class="title title-3">
                             <h3>Darrell Steward</h3>
                             <span>Trainer</span>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./images/trainer4.png" alt="">
+                        <img src="images/trainer4.png" alt="">
                         <div class="title title-4">
                             <h3>Dianne Russell</h3>
                             <span>Trainer</span>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./images/trainer5.png" alt="">
+                        <img src="images/trainer5.png" alt="">
                         <div class="title title-5">
                             <h3>Cody Fisher</h3>
                             <span>Trainer</span>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./images/trainer6.png" alt="">
+                        <img src="images/trainer6.png" alt="">
                         <div class="title title-6">
                             <h3>Theresa Webb</h3>
                             <span>Trainer</span>
