My First Assignment

--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
                 <div class="image">
                     <img src="images/images 2.png" alt="">
                 </div>
+                <!-- <div class="video"> -->
+                    <div class="video-1">
+                        <h2>500+</h2>
+                        <span>Free Workout Video</span>
+                    </div>
+                    <div class="video-2">
+                        <h3>350+</h3>
+                        <span>Video Tutorial</span>
+                    </div>
+                <!-- </div> -->
             </div>
         </header>
         <!-- Header And Banner Section End -->
@@ -47,7 +57,7 @@
         <section id="" class="your-habit">
             <div class="content">
                 <h2>Change Your Habits</h2>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym</p>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym</p>
             </div>
             <div class="grid-container">
                 <div class="grid-card">
@@ -85,7 +95,7 @@
             <div class="container">
                 <div id="" class="text-content">
                     <h2>Run an Extra <br>Mile Easily</h2>
-                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                    <p>We believe fitness should be accessible to everyone, everywhere, <br> regardless of income or access to a gym. With hundreds of professional workouts.</p>
                     <button>Join Now</button>
                 </div>
                 <div class="image">
@@ -99,7 +109,7 @@
          <section id="" class="training">
             <div class="text-content">
                 <h2>Training and Exercises</h2>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
             </div>
             <div class="container">
                 <div class="div1" style="flex-grow: 0;">
@@ -135,7 +145,7 @@
          <!-- Calculator Section Start -->
           <section id="" class="calculator">
             <h2>BMI Calculator</h2>
-            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
           </section>
          <!-- Calculator Section End -->
 
@@ -200,7 +210,7 @@
           <section class="our-team">
             <div class="text-content">
                 <h2>Meet Our Team</h2>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income <br> or access to a gym.</p>
             </div>
             <div class="container">
                 <div class="team-content">
