My First Assignment

--- a/index.html
+++ b/index.html
@@ -38,17 +38,23 @@
                     </div>
                 </div>
                 <div class="image">
-                    <img src="images/images 2.png" alt="">
+                    <div>
+                        <img src="images/images 2.png" alt="">
+                    </div>
+                    <div class="video video-1">
+                        <div>
+                            <h4>500+</h4>
+                            <span>Free Workout Video</span>
+                        </div>
+                    </div>
+                    <div class="video video-2">
+                        <div>
+                            <h4>350+</h4>
+                            <span>Video Tutorial</span>
+                        </div>
+                    </div>
                 </div>
                 <!-- <div class="video"> -->
-                    <div class="video-1">
-                        <h2>500+</h2>
-                        <span>Free Workout Video</span>
-                    </div>
-                    <div class="video-2">
-                        <h3>350+</h3>
-                        <span>Video Tutorial</span>
-                    </div>
                 <!-- </div> -->
             </div>
         </header>
